--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "flowbite": "^1.4.7",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
